--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "vue3-vite2-starter",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "serve": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/pingan8787/vue3-vite2-starter.git"
+  "dependencies": {
+    "vue": "^3.0.5"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/pingan8787/vue3-vite2-starter/issues"
-  },
-  "homepage": "https://github.com/pingan8787/vue3-vite2-starter#readme"
+  "devDependencies": {
+    "@types/node": "^14.14.41",
+    "@vitejs/plugin-vue": "^1.2.1",
+    "@vue/compiler-sfc": "^3.0.5",
+    "axios": "^0.21.1",
+    "element-plus": "^1.0.2-beta.40",
+    "typescript": "^4.1.3",
+    "vite": "^2.1.5",
+    "vue-router": "^4.0.6",
+    "vue-tsc": "^0.0.24",
+    "vuex": "^4.0.0"
+  }
 }
